- setup micrometer inside microservices. - integrate Prometheus to Grafana - Monitoring using Actuator, Micrometer, Prometheus & Grafana - Create alerts & send notifications using grafana

--- a/Cards/pom.xml
+++ b/Cards/pom.xml
@@ -31,6 +31,15 @@
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
+
+		<!--      micrometer supports for prometheus
+           expose the actuator metrics in a format that my Prometheus can understand.
+-->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -110,7 +119,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<to>
-						<image>baotuyloan1/${project.artifactId}:250107</image>
+						<image>baotuyloan1/${project.artifactId}:250109</image>
 					</to>
 				</configuration>
 			</plugin>
