--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -29,3 +29,7 @@ management:
     health:
       probes:
         enabled: true
+  #        groups all metrics related to the microservice under the application name
+  metrics:
+    tags:
+      application: ${spring.application.name}
