--- a/Loans/src/main/resources/application.yml
+++ b/Loans/src/main/resources/application.yml
@@ -62,6 +62,10 @@ management:
       enabled: true
     liveness-state:
       enabled: true
+    #        groups all metrics related to the microservice under the application name
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 # expose shutdown api
 #endpoints:
