--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -31,6 +31,16 @@
 		<spring-cloud.version>2023.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
+
+		<!--      micrometer supports for prometheus
+           expose the actuator metrics in a format that my Prometheus can understand.
+-->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -79,7 +89,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<to>
-						<image>baotuyloan1/${project.artifactId}:250107</image>
+						<image>baotuyloan1/${project.artifactId}:250109</image>
 					</to>
 				</configuration>
 			</plugin>
