--- a/Accounts/pom.xml
+++ b/Accounts/pom.xml
@@ -31,9 +31,18 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <otelVersion>2.11.0</otelVersion>
     </properties>
     <dependencies>
 
+        <!--        during compilation, I don't need this open telementry-->
+        <!--        only when I'm trying to run my application at runtime-->
+        <dependency>
+            <groupId>io.opentelemetry.javaagent</groupId>
+            <artifactId>opentelemetry-javaagent</artifactId>
+            <version>${otelVersion}</version>
+            <scope>runtime</scope>
+        </dependency>
 <!--      micrometer supports for prometheus
            expose the actuator metrics in a format that my Prometheus can understand.
 -->
