--- a/Loans/pom.xml
+++ b/Loans/pom.xml
@@ -30,9 +30,19 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
+		<otelVersion>2.11.0</otelVersion>
 	</properties>
 	<dependencies>
 
+		<!--        during compilation, I don't need this open telementry-->
+<!--		automatic add opentelemetry-javaagent-2.11.0.jar to /app/libs/-->
+		<!--        only when I'm trying to run my application at runtime-->
+		<dependency>
+			<groupId>io.opentelemetry.javaagent</groupId>
+			<artifactId>opentelemetry-javaagent</artifactId>
+			<version>${otelVersion}</version>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!--      micrometer supports for prometheus
                    expose the actuator metrics in a format that my Prometheus can understand.
@@ -119,7 +129,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>baotuyloan1/${project.artifactId}:250109</name>
+						<name>baotuyloan1/${project.artifactId}:250111</name>
 					</image>
 					<excludes>
 						<exclude>
