--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -62,3 +62,13 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
+
+logging:
+  level:
+    com:
+      baond:
+        configserver: DEBUG
+  pattern:
+    #    five characters for some log severity (info, warn, error)
+    # after the tag information, convey to my spring boot framework at runtime Open Telemetry library is going to generate the trace ID with the context information.
+    level: "%5p [${spring.application.name},%X{traceId},%X{spanId}]"
