--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -33,3 +33,14 @@ management:
   metrics:
     tags:
       application: ${spring.application.name}
+
+
+logging:
+  level:
+    com:
+      baond:
+        eurekaserver: DEBUG
+  pattern:
+    #    five characters for some log severity (info, warn, error)
+    # after the tag information, convey to my spring boot framework at runtime Open Telemetry library is going to generate the trace ID with the context information.
+    level: "%5p [${spring.application.name},%X{traceId},%X{spanId}]"
