--- a/Accounts/src/main/resources/application.yml
+++ b/Accounts/src/main/resources/application.yml
@@ -107,10 +107,9 @@ logging:
       example:
         microserviceaccounts: DEBUG
   pattern:
-#    five characters for some log severity (info, warn, error)
+    #    five characters for some log severity (info, warn, error)
     # after the tag information, convey to my spring boot framework at runtime Open Telemetry library is going to generate the trace ID with the context information.
-    level: "%5p [${spring.application.name},%X{traceId},%X{spanId}]"
-
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
 resilience4j:
   circuitbreaker:
