--- a/Loans/pom.xml
+++ b/Loans/pom.xml
@@ -30,7 +30,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
-		<otelVersion>2.11.0</otelVersion>
+		<otelVersion>1.33.5</otelVersion>
 	</properties>
 	<dependencies>
 
@@ -129,7 +129,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>baotuyloan1/${project.artifactId}:250111</name>
+						<name>baotuyloan1/${project.artifactId}:250112</name>
 					</image>
 					<excludes>
 						<exclude>
@@ -139,13 +139,49 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<!--			download opentelemetry-javaagent-2.11.0.jar when build image-->
+			<!--			we need to use OpenTelemetry, so we need to download opentelemetry-javaagent-2.11.0.jar-->
+			<!--			Change this build to Jib to download opentelemetry-javaagent-2.11.0.jar-->
+
+			<!--			<plugin>-->
+<!--				<groupId>org.springframework.boot</groupId>-->
+<!--				<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--				<configuration>-->
+<!--					<image>-->
+<!--						<runImage>buildpack-deps:jammy-curl</runImage>-->
+<!--					</image>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
+
+<!--			<plugin>-->
+<!--				<groupId>org.codehaus.mojo</groupId>-->
+<!--				<artifactId>exec-maven-plugin</artifactId>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>exec</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<executable>sh</executable>-->
+<!--							<arguments>-->
+<!--								<argument>-c</argument>-->
+<!--								<argument>-->
+<!--									mkdir -p ${project.build.directory}/app/libs &amp;&amp; curl -L -o ${project.build.directory}/app/libs/opentelemetry-javaagent-2.11.0.jar https://repo1.maven.org/maven2/io/opentelemetry/javaagent/opentelemetry-javaagent/2.11.0/opentelemetry-javaagent-2.11.0.jar-->
+<!--								</argument>-->
+<!--							</arguments>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.2</version>
 				<configuration>
-					<image>
-						<runImage>buildpack-deps:jammy-curl</runImage>
-					</image>
+					<to>
+						<image>baotuyloan1/${project.artifactId}:250113</image>
+					</to>
 				</configuration>
 			</plugin>
 		</plugins>
