--- a/Accounts/pom.xml
+++ b/Accounts/pom.xml
@@ -35,6 +35,17 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+        </dependency>
+
+
         <!--        during compilation, I don't need this open telementry-->
         <!--        only when I'm trying to run my application at runtime-->
         <dependency>
